--- a/frontend_2/my-app/src/components/Free.css
+++ b/frontend_2/my-app/src/components/Free.css
@@ -38,6 +38,21 @@
   text-align: left;
 }
 
+/* Image styling */
+.image-container {
+  width: 300px;
+  height: 400px;
+  margin: 0 auto;
+  border-radius: 10px; /* Rounded corners for the image */
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  height: auto;
+  border-radius: 5px; /* Rounded corners for the image */
+}
+
 .text-input {
   width: 100%;
   padding: 10px;
@@ -56,7 +71,6 @@
   border-radius: 10px;
   text-decoration: none; /* Remove underline for links */
   transition: background-color 0.3s;
-  margin: 10px;
 }
 
 .button:hover {
