--- a/frontend_2/my-app/src/components/Landing.css
+++ b/frontend_2/my-app/src/components/Landing.css
@@ -3,11 +3,17 @@
 /* Center the content vertically and horizontally */
 .auth-form-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   height: 100vh; /* Full viewport height */
   background-color: #fff; /* Background color for the container */
+}
+
+.left, .right {
+  flex: 1;
+  text-align: center;
+  padding: 100px;
 }
 
 /* Title at the top */
@@ -29,6 +35,7 @@
 
 /* Bullet points styling */
 .bullet-points {
+  text-align: left;
   list-style-type: disc;
   max-width: 600px;
   margin: 0 auto;
@@ -43,12 +50,15 @@
 
 /* Image styling */
 .image-container {
-  max-width: 300px;
+  width: 300px;
+  height: 300px;
   margin: 0 auto;
+  border-radius: 10px; /* Rounded corners for the image */
 }
 
 .image {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   height: auto;
   border-radius: 5px; /* Rounded corners for the image */
 }
