--- a/frontend_2/my-app/src/components/Offer.css
+++ b/frontend_2/my-app/src/components/Offer.css
@@ -24,9 +24,12 @@
 .mission-box {
   background-color: #fff; /* White background for the box */
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Box shadow for depth */
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+  margin: 300px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .mission-box p {
@@ -34,34 +37,11 @@
   color: #555; /* Slightly darker text color */
 }
 
-/* Image */
-.image-container {
-  max-width: 100%;
-  margin: 20px 0;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Box shadow for depth */
-}
-
-.image {
-  max-width: 100%;
-  height: auto;
-  border-radius: 10px; /* Rounded corners for the image */
-}
-
-/* Subtitle */
-.subtitle {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #333; /* Dark text color */
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
 /* Bordered Text Box */
 .bordered-box {
   border: 2px solid #007bff; /* Blue border */
   border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 10px;
 }
 
 .bordered-box p {
@@ -74,7 +54,6 @@
   background-color: #007bff; /* Blue button color */
   color: #fff; /* White text color */
   border: none;
-  padding: 12px 20px;
   font-size: 1.2rem;
   border-radius: 10px;
   text-decoration: none; /* Remove underline for links */
